# alfred

./: .gitignore  OAuth.php  README.md  TODO.md  alfred.pem.pub  doc.php  index.html  index.php  main.go  methods_to_add  oauth.php  server_methods.json  test.md
OSX/Alfred/: Alfred-Info.plist  AppController.h  AppController.m  AppDelegate.h  AppDelegate.m  main.m
OSX/Alfred.xcodeproj/: project.pbxproj
OSX/AlfredTests/: AlfredTests-Info.plist  AlfredTests.h  AlfredTests.m
PHPServer/: .htaccess  aql.js  aqltest.html  circle.html  config.php  config.php.example  env.sh.example  example  index.php  net.twitter.completeauth.json  net.twitter.startauth.json  sneezewatch.html  tell.html
PHPServer/cgi-bin/: a.out
PHPServer/oauth/: access.php  getacctok.php  globals.php  oauth_helper.php
PHPServer/passwords/: get.php
PHPServer/wordpress/: wp-config.php
WPF/: Alfred.sln
WPF/Alfred/: Alfred.csproj  App.xaml  (+3 more)
cli/: alfred.py  cursestest.py  main.py  test.py
doc/: README.md  doc.php  template.md  test.md
passwords/: add.php
perl/: Alfred.pm  main.pl
php/: alfred.php  search.php
server/: .json.c.swp  .main.c.swp  CMakeLists.txt  Makefile  alfred.c  config.h.example  error.c  error.h  json.c  json.h  location.c  main.c  net.h  network.c  network.h  password.h  sql.c  sql.h  utils.c  utils.h  xbmc.c
server/cmake/: FindGlib.cmake  FindJansson.cmake  FindMySQL.cmake
server/modules/: Makefile
server/src/: CMakeLists.txt  Makefile  alfred.c  alfred.h  error.c  json.c  location.h  main.c  net.c  password.c  sql.c  utils.c  utils.h  xbmc.h
web/: index.html
(+19 files in other folders)
